--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1471,3 +1471,291 @@ section {
   padding-left: 5px;
   color: #009000;
 }
+/************************************************/
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.item-container {
+  position: relative;
+  margin: 24px;
+  width: 320px;
+  height: 570px;
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.img-container,
+.body-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.img-container img {
+  width: 100%;
+}
+
+.body-container {
+  position: relative;
+}
+
+.overlay {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-color: rgba(24, 83, 122, 0.6);
+  opacity: 0;
+  transition: height linear 0.4s, opacity linear 0.2s;
+}
+
+.item-container:hover .overlay {
+  opacity: 1;
+  height: 150px;
+}
+
+.event-info {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+}
+
+.title,
+.price {
+  color: #18537a;
+  font-size: 1.5em;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 12px;
+}
+
+.info {
+  letter-spacing: 0.5px;
+  margin-bottom: 6px;
+}
+
+.separator {
+  width: 20%;
+  height: 6px;
+  background-color: #17537a;
+  margin-bottom: 16px;
+}
+
+.additional-info {
+  border-top: 1px solid #bbb;
+  margin-top: 12px;
+  padding: 28px;
+  padding-bottom: 0;
+}
+
+.additional-info .info {
+  font-size: 0.9em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.info i {
+  color: #18537a;
+  font-size: 1.1em;
+  margin-right: 4px;
+}
+
+.info span {
+  color: #18537a;
+  font-weight: bolder;
+}
+
+.action {
+  color: #fff;
+  border: 3px solid #fff;
+  background-color: transparent;
+  position: absolute;
+  top: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
+  outline: none;
+  cursor: pointer;
+  padding: 12px;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  font-weight: bold;
+  letter-spacing: 2px;
+  transition: background-color 0.4s, top 0.4s;
+}
+
+.item-container:hover .action {
+  top: 50px;
+}
+
+.action:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+ :root {
+	 --vs-primary: 29 92 255;
+}
+/*Dialog Styles*/
+ dialog {
+	 padding: 1rem 3rem;
+	 background: white;
+	 max-width: 400px;
+	 padding-top: 2rem;
+	 border-radius: 20px;
+	 border: 0;
+	 box-shadow: 0 5px 30px 0 #000;
+	 animation: fadeIn 1s ease both;
+}
+ dialog::backdrop {
+	 animation: fadeIn 1s ease both;
+	 z-index: 2;
+	 backdrop-filter: blur(20px);
+}
+ dialog .x {
+	 filter: grayscale(1);
+	 border: none;
+	 background: none;
+	 position: absolute;
+	 top: 15px;
+	 right: 10px;
+	 transition: ease filter, transform 0.3s;
+	 cursor: pointer;
+	 transform-origin: center;
+}
+ dialog .x:hover {
+	 filter: grayscale(0);
+	 transform: scale(1.1);
+}
+ dialog h2 {
+	 font-weight: 600;
+	 font-size: 2rem;
+	 padding-bottom: 1rem;
+}
+ dialog p {
+	 font-size: 1rem;
+	 line-height: 1.3rem;
+	 padding: 0.5rem 0;
+}
+ dialog p a:visited {
+	 color: #000;
+}
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+dialog ol{
+  max-width:500px;/*remove if full width*/
+  text-align:justify;
+  }
+  
+  dialog ol {
+  position: relative;
+  padding-left: 60px;
+  margin-bottom: 20px;
+  list-style: none !important;
+  }
+   
+  dialog ol li {
+  position: relative;
+  margin-top: 0em;
+  margin-bottom: 20px;
+  }
+  
+  /*number styling - note that you will need to physically add in a span class*/
+  dialog ol li .number_divider {
+  position: absolute;
+  font-weight: 800;
+  font-size: 2em;
+  left: -60px;
+  top: -5px;
+  }
+  
+  /*line styling*/
+  dialog ol li:before {
+  content: "";
+  background: #8dbeb2;
+  position: absolute;
+  width: 2px;
+  top: 1px;
+  bottom: -21px;
+  left: -24px;
+  }
+  
+  /*dot styling*/
+  dialog ol li:after {
+  content: "";
+  background: #8dbeb2;
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  top: 1px;
+  left: -31px;
+  }
+  
+  /*removes line from last number*/
+  dialog ol li:last-child:before {
+  content: "";
+  background: #ffffff;
+  }
+
+  /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  dialog {
+    scrollbar-width: auto;
+    scrollbar-color: #8dbeb2 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  dialog::-webkit-scrollbar {
+    width: 14px;
+  }
+
+  dialog::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  dialog::-webkit-scrollbar-thumb {
+    background-color: #8dbeb2;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
+
+  /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #0eb45b #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 14px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #0eb45b;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
