--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1473,8 +1473,6 @@ section {
 }
 /************************************************/
 .cardContainer {
-  width: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -1760,3 +1758,17 @@ dialog ol{
     border: 3px solid #ffffff;
   }
   
+  @media all and (max-width: 720px) {
+    .videoContainer{
+      width:90% !important;
+    }
+  }
+
+  @media all and (min-width: 720px) {
+    video{ position: relative; top: 50%; transform: translateY(-50%); }
+  }
+  video {
+    /* override other styles to make responsive */
+    width: 100%    !important;
+    height: auto   !important;
+  }
