--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1777,3 +1777,44 @@ dialog ol{
     width: 100%    !important;
     height: auto   !important;
   }
+
+  .social-icons-btn {
+    display: flex;
+  }
+  .icons {
+    width: 3rem;
+    height: 3rem;
+    font-size: 2.5rem;
+    font-weight: 500;
+    text-decoration: none;
+    background: #111;
+    margin: 0.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    box-shadow: 
+      0 2px 2px #d1d1d1;
+    color: #fff;
+    cursor: pointer;
+    transition:
+      all 0.15s ease;
+  }
+  .twitter:hover {
+    background: #00ECEE;
+  }
+  .facebook:hover {
+    background: #4267B2;
+  }
+  .instagram:hover {
+    background-image: 
+      linear-gradient(
+      #8a3ab9,
+      #e95950, 
+      #bc2a8d, 
+      #fccc63
+      );
+  }
+  .linkedin:hover {
+    background: #0A66C2;
+  }
