--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1818,3 +1818,37 @@ dialog ol{
   .linkedin:hover {
     background: #0A66C2;
   }
+  .card-link {
+    font-size: 1rem;
+}
+
+.card-link {
+    letter-spacing: 0.0178571em;
+    font-weight: 500;
+}
+
+#app {
+  width: 96%;
+  max-width: 500px;
+  margin: 40px auto;
+  padding: 28px;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  background-color: transparent;
+  box-shadow: 2px 2px 5px 0px rgba(200, 200, 200, 1);
+  font-family: "Times New Roman";
+}
+
+.pdf {
+  display: block;
+  width: 150px;
+  padding:10px;
+  margin: 0 auto;
+  text-decoration: none;
+  text-align: center;
+  font-size: .8rem;
+  color: #ffffff;
+  border: 0;
+  background-color: #00c2bc;
+  cursor: pointer;
+}
